[project]
name = "POSITMJ"
version = "0.1.0"
description = "Train MLPs and export their weights in Posit number format for FPGA/ASIC hardware deployment"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Mihir" },
    { name = "Jiyan" }
]
keywords = ["posit", "mlp", "neural-network", "fpga", "asic", "verilog", "hardware", "quantization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
]

[project.optional-dependencies]
test = ["pytest", "softposit"]

[project.urls]
Homepage = "https://github.com/yourusername/POSITMJ"
Issues = "https://github.com/yourusername/POSITMJ/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["POSITMJ"]
